--- a/Seasoning/ingredients/static/css/ingredients/view_ingredient.scss
+++ b/Seasoning/ingredients/static/css/ingredients/view_ingredient.scss
@@ -28,3 +28,12 @@ h1 #ingredient-synonyms {
 #ingredient-availability-wrapper {
 	clear: both;
 }
+
+@media only screen and (max-width: 768px) {
+
+	#ingredient-image {
+		float: none;
+		width: 100%;
+		margin: 0 0 20px;
+	}
+}
